# pypdf-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/: pypdf_cli.py  pypdfcli.py
tests/: test_pypdf-cli.py  test_pypdfcli.py
