[build-system]
requires = [ "flit_core >=3.2,<4" ]
build-backend = "flit_core.buildapi"

[project]
name = "pypdf-cli"
version = "1.0.0"
authors = [ { name = "Tobias Lass", email = "tobi208@github.com" } ]
description = "A Python-based CLI that allows for comfortable every-day PDF manipulation with pypdf."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "click>=8.0.3",
    "pypdf>=3.16.1",
]
license = { file = "LICENSE" }
keywords = [ "pdf", "cli", "pypdf", "click" ]

[project.urls]
"Homepage" = "https://github.com/tobi208/pypdf-cli"
"Bug Tracker" = "https://github.com/tobi208/pypdf-cli/issues"

[project.scripts]
pypdf-cli = "pypdf_cli:cli"

[project.optional-dependencies]
test = [ "pytest>=7.0.0" ]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
